# witx-bindgen

./: Cargo.toml
crates/gen-c/src/: lib.rs
crates/gen-core/: Cargo.toml
crates/gen-js-near/: Cargo.toml
crates/gen-js-near/src/: lib.rs
crates/gen-js-near/tests/codegen/: messages.wit
crates/gen-ts-near/: Cargo.toml
crates/gen-ts-near/src/: lib.rs
crates/parser/: Cargo.toml
tests/codegen/: hashmap.wit
